--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,400&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -313,27 +317,140 @@
         <div class="evo-white">
           <div class="container">
             <div class="evo-white__inner">
-                <p class="evo-white__text">
-                    Его неповторимый дизайн — это естественная эволюция культовых линий Huracán, включающая новые сложные решения, поднимающие производительность и вызывающие эмоции на невиданный ранее уровень.
-                </p>
-                <p class="evo-white__text">
-                    Беспрецедентный обвес был разработан инженерами отдела автоспорта Automobili Lamborghini в сотрудничестве с Dallara Engineering и Lamborghini Centro Stile. Последний также разработал стартовую ливрею для автомобиля в честь партнерства между Lamborghini Squadra Corse и Roger Dubuis, которое началось в 2018 году.
-                </p>
-                <p class="evo-white__text">
-                    Среди наиболее очевидных изменений в обвесе Lamborghini Huracan Super Trofeo EVO — задний спойлер на заднем капоте и верхний воздухозаборник, которые делают его мгновенно узнаваемым для зрителей.
-                </p>
-                <div class="evo-white__video">
-                    <a class="evo-white__vdeo-linck" href="#">
-                        <img src="images/evo-icon.svg" alt="">
-                        <span>смотреть онлайн</span>
-                    </a>
-                </div>
+              <p class="evo-white__text">
+                Его неповторимый дизайн — это естественная эволюция культовых
+                линий Huracán, включающая новые сложные решения, поднимающие
+                производительность и вызывающие эмоции на невиданный ранее
+                уровень.
+              </p>
+              <p class="evo-white__text">
+                Беспрецедентный обвес был разработан инженерами отдела
+                автоспорта Automobili Lamborghini в сотрудничестве с Dallara
+                Engineering и Lamborghini Centro Stile. Последний также
+                разработал стартовую ливрею для автомобиля в честь партнерства
+                между Lamborghini Squadra Corse и Roger Dubuis, которое началось
+                в 2018 году.
+              </p>
+              <p class="evo-white__text">
+                Среди наиболее очевидных изменений в обвесе Lamborghini Huracan
+                Super Trofeo EVO — задний спойлер на заднем капоте и верхний
+                воздухозаборник, которые делают его мгновенно узнаваемым для
+                зрителей.
+              </p>
+              <div class="evo-white__video">
+                <a class="evo-white__vdeo-linck" href="#">
+                  <img src="images/evo-icon.svg" alt="" />
+                  <span>смотреть онлайн</span>
+                </a>
+              </div>
             </div>
           </div>
         </div>
       </section>
+      <section class="blog">
+        <div class="container">
+          <h3 class="blog__title">БЛОГ</h3>
+          <div class="blog__slider swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide blog__item">
+                <img class="blog__item-img" src="images/blog-1.jpg" alt="" />
+                <h4 class="blog__item-title">
+                  НЕЛЬСОН ПИКЕ СТАЛ ПОБЕДИТЕЛЕМ ГРАНД-ФИНАЛА В ПОРТИМАНЕ
+                </h4>
+                <p class="blog__item-text">
+                  Нельсон Пике-младший из Ansa Motorsports обеспечил возвращение
+                  титула Lamborghini Super Trofeo Grand Finals в Северную
+                  Америку впервые с 2017 года после победы и второе место в паре
+                  50-минутных гонок на Autodromo Nacionale do Algarve в
+                  Портимане.Между тем, титул Pro-Am был подорван, поскольку
+                  Брайан Ортис и Себастьян Карасо из
+                </p>
+                <a class="blog__item-link" href="#">читать подробнее...</a>
+              </div>
+              <div class="swiper-slide blog__item">
+                <img class="blog__item-img" src="images/blog-2.jpg" alt="" />
+                <h4 class="blog__item-title">ГРАНД ФИНАЛ. ДЕНЬ 1</h4>
+                <p class="blog__item-text">
+                  Утренний дождь означал, что мокрая гонка была объявлена ​​до
+                  старта, и перед большинством экипажей стоял выбор:
+                  использовать слики или мокрые шины. Большинство участников
+                  предпочли мокрую трассу, но поулист Спинелли начал гонку на
+                  сликах и сразу же поплатился за это. Huracan № 61 опустился
+                  вниз, заняв всего 28-е место, поскольку
+                </p>
+                <a class="blog__item-link" href="#">читать подробнее...</a>
+              </div>
+              <div class="swiper-slide blog__item">
+                <img class="blog__item-img" src="images/blog-1.jpg" alt="" />
+                <h4 class="blog__item-title">
+                  НЕЛЬСОН ПИКЕ СТАЛ ПОБЕДИТЕЛЕМ ГРАНД-ФИНАЛА В ПОРТИМАНЕ
+                </h4>
+                <p class="blog__item-text">
+                  Нельсон Пике-младший из Ansa Motorsports обеспечил возвращение
+                  титула Lamborghini Super Trofeo Grand Finals в Северную
+                  Америку впервые с 2017 года после победы и второе место в паре
+                  50-минутных гонок на Autodromo Nacionale do Algarve в
+                  Портимане.Между тем, титул Pro-Am был подорван, поскольку
+                  Брайан Ортис и Себастьян Карасо из
+                </p>
+                <a class="blog__item-link" href="#">читать подробнее...</a>
+              </div>
+              <div class="swiper-slide blog__item">
+                <img class="blog__item-img" src="images/blog-2.jpg" alt="" />
+                <h4 class="blog__item-title">ГРАНД ФИНАЛ. ДЕНЬ 1</h4>
+                <p class="blog__item-text">
+                  Утренний дождь означал, что мокрая гонка была объявлена ​​до
+                  старта, и перед большинством экипажей стоял выбор:
+                  использовать слики или мокрые шины. Большинство участников
+                  предпочли мокрую трассу, но поулист Спинелли начал гонку на
+                  сликах и сразу же поплатился за это. Huracan № 61 опустился
+                  вниз, заняв всего 28-е место, поскольку
+                </p>
+                <a class="blog__item-link" href="#">читать подробнее...</a>
+              </div>
+            </div>
+            <div class="blog__button swiper-button-left">
+              <img src="images/arrow-left.svg" alt="" />
+            </div>
+            <div class="blog__button swiper-button-right">
+              <img src="images/arrow-right.svg" alt="" />
+            </div>
+          </div>
+          <div class="blog_quote">
+            <div class="blog_quote-box">
+              <blockquote class="blockquote">
+                <cite class="blockquote__name">
+                  <span>Чемпион Am</span>
+                  <p class="fio">Анджей Левандовски </p> 
+                </cite>
+                <p class="blockquote__text">
+                  «Я очень доволен титулом, моей второй победой в Am и четвертой
+                  в Super Trofeo, мне очень приятно делать это в этом году,
+                  потому что уровень соревнований очень высок. Должен сказать,
+                  сегодня было довольно легко, так как я все время контролировал
+                  ситуацию».
+                </p>
+              </blockquote>
+              <blockquote class="blockquote">
+                <cite class="blockquote__name">
+                  <span>Обладатель кубка Lamborghini</span>
+                  <p class="fio">Жерар ван дер Хорст </p> 
+                </cite>
+                <p class="blockquote__text">
+                  «Я очень доволен титулом, моей второй победой в Am и четвертой
+                  в Super Trofeo, мне очень приятно делать это в этом году,
+                  потому что уровень соревнований очень высок. Должен Обладатель
+                  кубка Lamborghini добавил: «Здорово выиграть титул, спустя
+                  четыре года после последнего
+                </p>
+              </blockquote>
+            </div>
+            <img class="blog_quote-img" src="images/quote.png" alt="" />
+          </div>
+        </div>
+      </section>
     </main>
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
