--- a/index.html
+++ b/index.html
@@ -128,6 +128,34 @@
               <a class="menu-link" href="#">Контакты</a>
             </li>
           </ul>
+          <button class="menu-btn">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+          <ul class="menu-mobile">
+            <li class="menu-item">
+              <a class="menu-link" href="#">О гонке</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Трек</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Lamborghini Super trofeo</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Новости</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Купить билеты</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Смотреть онлайн</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Контакты</a>
+            </li>
+          </ul>
         </nav>
       </div>
     </header>
@@ -147,7 +175,7 @@
           </div>
         </div>
       </section>
-      <section class="info">
+      <!--<section class="info">
         <div class="container">
           <div class="info__part info__part--first">
             <h3 class="info__title">СУПЕР ТРОФЕО МИРОВОЙ ФИНАЛ</h3>
@@ -448,8 +476,9 @@
             <img class="blog_quote-img" src="images/quote.png" alt="" />
           </div>
         </div>
-      </section>
+      </section>-->
     </main>
+    <!-- 
     <footer class="footer">
         <div class="container">
             <h3 class="footer__title">Контакты</h3>
@@ -527,6 +556,7 @@
             </div>
         </div>
     </footer>
+    -->
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
       defer
