--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           </div>
         </div>
       </section>
-      <!--<section class="info">
+      <section class="info">
         <div class="container">
           <div class="info__part info__part--first">
             <h3 class="info__title">СУПЕР ТРОФЕО МИРОВОЙ ФИНАЛ</h3>
@@ -476,9 +476,8 @@
             <img class="blog_quote-img" src="images/quote.png" alt="" />
           </div>
         </div>
-      </section>-->
+      </section>
     </main>
-    <!-- 
     <footer class="footer">
         <div class="container">
             <h3 class="footer__title">Контакты</h3>
@@ -556,7 +555,6 @@
             </div>
         </div>
     </footer>
-    -->
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
       defer
